avro_derive/tests/ui/avro_rs_373_untagged_enum.stderr
error: More than one variant maps to Schema::Null, this is not supported for bare unions
  --> tests/ui/avro_rs_373_untagged_enum.rs:22:6
   |
22 | enum Foo {
   |      ^^^
